k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: labsite
  name: website
  labels:
    app: website
spec:
  # Only ingress has access
  type: ClusterIP
  selector:
    app: website
  ports:
    - name: http
      port: 80
      targetPort: http
