k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: labsite
  annotations:
    # Tells cert-manager to issue and renew the cert named in tls.secretName below
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Sends plain HTTP to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - seanslab.site
        - www.seanslab.site
      secretName: website-tls
  rules:
    - host: seanslab.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
    - host: www.seanslab.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
